Fix display overflow

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ main {
   border-radius: 8px;
   font-size: 1.2rem;
   background-color: #2e2e2e;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .display:hover {
